# Tamaya

./: .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  INTEGRATION-BOUNDARY.md  Makefile  RUN-healthcat-backend.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5b81494e6cf8_initial_tables.py  a1b2c3d4e5f6_add_event_chunks.py  a3b4c5d6e7f8_diary_keywords.py  b2c3d4e5f6a7_add_who_where_when_to_event_chunks.py  b4c5d6e7f8a9_health_data_ownership.py  b8c9d0e1f2a3_add_users_table.py  c3d4e5f6a7b8_add_p0_auth_daily_diary.py  c3d4e5f6a7b8_b005_b008_device_id_unique.py  c5d6e7f8a9b0_user_preferences.py  c9d0e1f2a3b4_game_diary_completions.py  d0e1f2a3b4c5_user_sessions_active_unique.py  d4e5f6a7b8c9_b009_embedding_1024.py  e1f2a3b4c5d6_merge_auth_and_game_heads.py  e5f6a7b8c9d0_session_game_tables.py  f2a3b4c5d6e7_chat_session_max_turns.py
backend/app/: main.py
backend/app/presentation/: auth_deps.py
backend/deploy/: ncp-setup.md  nginx-api.conf
backend/evals/: README.md  __init__.py  cases.py  chunk_metrics.py  chunk_results.py  compare_reports.py  conversation_judge.py  conversation_metrics.py  conversation_results.py  conversation_schemas.py  diary_generation_metrics.py  diary_generation_results.py  e2e_metrics.py  e2e_results.py  e2e_schemas.py  fixture_schemas.py  generation_judge.py  generation_metrics.py  generation_results.py  generation_schemas.py  judge.py  judge_provider.py  metrics.py  report.py  results.py  retrieval_metrics.py  retrieval_results.py  retrieval_schemas.py  run_chunk_evaluation.py  run_conversation_evaluation.py  run_diary_generation_evaluation.py  run_e2e_evaluation.py  run_evaluation.py  run_generation_evaluation.py  run_retrieval_evaluation.py  run_signal_evaluation.py  runner.py  schemas.py  seed_fixtures.py  signal_metrics.py  (+5 more)
backend/evals/baselines/: retrieval-baseline.json
backend/evals/datasets/: coaching_cases.jsonl  conversation_cases.jsonl  diary_cases.jsonl  e2e_cases.jsonl  generation_cases.jsonl  guardrail_cases.jsonl  health_cases.jsonl  retrieval_cases.jsonl
backend/evals/fixtures/: coaching_fixtures.jsonl  diary_fixtures.jsonl  health_fixtures.jsonl  virtual_users.json
backend/evals/reports/: .gitignore
backend/scripts/: ingest_health_data.py  verify_clova_tool_calling.py
backend/tests/application/: test_agent_execution_observability.py  test_agent_read_tools.py  test_chat_agent.py  test_chat_message_adapter.py  test_chat_session_modes.py  test_coaching_prompt.py  test_diary_chat_prompt.py  test_diary_memory_query_service.py  (+15 more)
(+225 files in other folders)
