[project]
name = "ai-diary"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.131.0",
    "httpx>=0.27.0",      # 카카오 OAuth HTTP 클라이언트 (DEC-022.4)
    "openai>=2.21.0",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.3.0",  # JWT 서명·검증 (DEC-023)
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.41.0",
    "langgraph>=0.2",
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
]
