[project]
name = "ai-diary"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.131.0",
    "httpx>=0.27.0",      # 카카오 OAuth HTTP 클라이언트 (DEC-022.4)
    "openai>=2.21.0",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.3.0",  # JWT 서명·검증 (DEC-023)
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.41.0",
    "langgraph>=0.2",
    "langchain-core>=1.2.19",
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
    "torch>=2.0",
]

# torch: linux(도커/서버)에서는 CPU 전용 휠 사용 — nvidia CUDA 라이브러리(수 GB) 제거해
# 이미지 ~8GB→~1.5GB, 빌드 시간·디스크 대폭 절감. macOS(로컬)는 기본 PyPI 휠 사용.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
# 클린 아키텍처 백엔드 린트 설정 (pre-commit / lint-staged에서 사용)
line-length = 100
target-version = "py313"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# E/W(pycodestyle), F(pyflakes), I(isort), UP(pyupgrade), B(bugbear)
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # 라인 길이는 ruff format이 처리
    "B008",  # FastAPI 표준 패턴(Depends를 기본 인자로) false positive
    # 아래 두 룰은 의미 있으나 기존 코드 호환을 위해 도입 단계에서는 보류 (TODO: 점진 활성화)
    "B904",  # except 내 raise ... from
    "B905",  # zip(strict=) 명시
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
